@@ -4,6 +4,7 @@
 <html>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="Content-Type" content="text/html; charset={encoding}"/>
     <title>Krexx {version}</title>
     {cssJs}
   </head>
