@@ -4,6 +4,8 @@
 <html>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="Content-Type" content="text/html; charset={encoding}"/>
+    <meta name="robots" content="noindex" />
     <title>{headline}</title>
     {cssJs}
   </head>
