@@ -75,6 +75,11 @@ class BacktraceController extends AbstractController
         $analysis = $this->pool
             ->createClass('Brainworxx\\Krexx\\Analyse\\Routing\\Process\\ProcessBacktrace')
             ->process($backtrace, -1);
+
+        // Detect the encoding on the start-chunk-string of the analysis
+        // for a complete encoding picture.
+        $this->pool->chunks->detectEncoding($analysis);
+
         // Now that our analysis is done, we must check if there was an emergency
         // break.
         if ($this->pool->emergencyHandler->checkEmergencyBreak()) {
