@@ -45,6 +45,7 @@ use Brainworxx\Krexx\View\Messages;
 use Brainworxx\Krexx\View\Render;
 use Brainworxx\Krexx\Analyse\Routing\Routing;
 use Brainworxx\Krexx\Service\Misc\File;
+use Brainworxx\Krexx\Service\Misc\Encoding;
 
 /**
  * Here we store all classes that we need.
@@ -141,6 +142,11 @@ class Pool extends Factory
     public $fileService;
 
     /**
+     * @var Encoding
+     */
+    public $encodingService;
+
+    /**
      * Initializes all needed classes.
      *
      * @param string $krexxDir
@@ -165,6 +171,8 @@ class Pool extends Factory
         $this->flushRewrite();
         // Set the directory.
         $this->krexxDir = $krexxDir;
+        // Initialize the encoding service.
+        $this->encodingService = $this->createClass('Brainworxx\\Krexx\\Service\\Misc\\Encoding');
         // Initializes the file service.
         $this->fileService = $this->createClass('Brainworxx\\Krexx\\Service\\Misc\\File');
         // Initializes the messages.
@@ -254,103 +262,4 @@ class Pool extends Factory
         $this->render =  $this->createClass($classname);
     }
 
-    /**
-     * Sanitizes a string, by completely encoding it.
-     *
-     * Should work with mixed encoding.
-     *
-     * @param string $data
-     *   The data which needs to be sanitized.
-     * @param bool $code
-     *   Do we need to format the string as code?
-     *
-     * @return string
-     *   The encoded string.
-     */
-    public function encodeString($data, $code = false)
-    {
-        // Try to encode it.
-        set_error_handler(function () {
-            /* do nothing. */
-        });
-
-        // We are also encoding @, because we need them for our chunks.
-        // The { are needed in the marker of the skin.
-        $result = str_replace(array('@', '{'), array('&#64;', '&#123;'), htmlentities($data));
-
-        // Check if encoding was successful.
-        // 99.99% of the time, the encoding works.
-        if (empty($result)) {
-            // Something went wrong with the encoding, we need to
-            // completely encode this one to be able to display it at all!
-            $data = mb_convert_encoding($data, 'UTF-32', mb_detect_encoding($data));
-
-            if ($code) {
-                // We are displaying sourcecode, so we need
-                // to do some formatting.
-                $sortingCallback = $sortingCallback = array($this, 'arrayMapCallbackCode');
-            } else {
-                // No formatting.
-                $sortingCallback = array($this, 'arrayMapCallbackNormal');
-            }
-
-            // Here we have another SPOF. When the string is large enough
-            // we will run out of memory!
-            // @see https://sourceforge.net/p/krexx/bugs/21/
-            // We will *NOT* return the unescaped string. So we must check if it
-            // is small enough for the unpack().
-            // 100 kb should be save enough.
-            if (strlen($data) < 102400) {
-                $result = implode("", array_map($sortingCallback, unpack("N*", $data)));
-            } else {
-                $result = $this->messages->getHelp('stringTooLarge');
-            }
-        } else {
-            if ($code) {
-                // Replace all tabs with 2 spaces to make sourcecode better
-                // readable.
-                $result = str_replace(chr(9), '&nbsp;&nbsp;', $result);
-            }
-        }
-
-        // Reactivate whatever error handling we had previously.
-        restore_error_handler();
-
-        return $result;
-    }
-
-    /**
-     * Callback for the complete escaping of strings.
-     * Complete means every single char gets escaped.
-     * This one dies some extra stuff for code display.
-     *
-     * @param integer $n
-     *
-     * @return string
-     *   The extra escaped result for code.
-     */
-    protected function arrayMapCallbackCode($n)
-    {
-        if ($n === 9) {
-            // Replace TAB with two spaces, it's better readable that way.
-            $result = '&nbsp;&nbsp;';
-        } else {
-            $result = '&#' . $n . ';';
-        }
-        return $result;
-    }
-
-    /**
-     * Callback for the complete escaping of strings.
-     * Complete means every single char gets escaped.
-     *
-     * @param integer $n
-     *
-     * @return string
-     *   The extra escaped result.
-     */
-    protected function arrayMapCallbackNormal($n)
-    {
-        return '&#' . $n . ';';
-    }
 }
